英文語系選單修改 / banner更新 / 隱私權說明製作

--- a/en/diamond.html
+++ b/en/diamond.html
@@ -33,6 +33,9 @@
                     <a class="logo nav-link position-relative" href="index.html"><img class="logo-img position-absolute w-100" src="../images/logo.png" alt=""></a>
                 </li>
                 <li class="nav-item text-center">
+                    <a class="nav-link" href="leaderboard.html"><img class="w-100 pc-only" src="../images/iCON_Ranking-ENG.png"><span class="ph-only justify-content-center">Leaderboard</span></a>
+                </li>
+                <li class="nav-item text-center">
                     <a class="nav-link" href="diamond.html"><img class="w-100 pc-only" src="../images/iCON_Gift-ENG.png"><span class="ph-only justify-content-center">Diamond</span></a>
                 </li>
                 <li class="nav-item text-center">
