--- a/en/index.html
+++ b/en/index.html
@@ -56,7 +56,7 @@
 
     <main class="container-fluid p-0 home">
         <div class="w-100 overflow-hidden d-flex align-items-center justify-content-center home-img">
-            <img class="w-100" src="https://play-lh.googleusercontent.com/MD8GDHHuce1bPWDacQFBC8CMUbr0N6kyCHQk_E_tH0y-GrBzzSl_Pau1Xg3O14n_ig=h500" alt="">
+            <img class="w-100" src="../images/Home-AW-WEB-BannerH-13012022.png" alt="">
         </div>
         
 
