--- a/th/contact.html
+++ b/th/contact.html
@@ -76,7 +76,83 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Button trigger modal -->
+            <div class="row w-100 mx-auto">
+                <button type="button" class="btn btn-dark col-12 col-md-6" data-toggle="modal" data-target="#regulations">
+                    ข้อบังคับของผู้ใช้
+                </button>
+                <button type="button" class="btn btn-dark col-12 col-md-6" data-toggle="modal" data-target="#privacy">
+                    ประกาศด้านนโยบายความเป็นส่วนตัว
+                </button>
+            </div>
+
+        </section>
+
     </main>
+
+    <!-- Regulations Modal -->
+    <div class="modal fade" id="regulations" tabindex="-1" role="dialog" aria-labelledby="regulationsTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="regulationsTitle">ข้อบังคับของผู้ใช้</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>ข้อตกลงและเงื่อนไขการสมัครเป็นสมาชิกในการให้บริการเกมออนไลน์ของ (มารวย99)</p>
+                    <p>ข้อตกลงการสมัครสมาชิกและการใช้บริการเกมออนไลน์ ยินดีต้อนรับสมาชิกใหม่ของ มารวย99 เพื่อปกป้องสิทธิของผู้ใช้บริการ โปรดอ่านเงื่อนไขการให้บริการทั้งหมดและหากท่านกดเลือก ยอมรับ ก็จะถือว่าได้ศึกษาและยินยอมที่จะปฏิบัติ ตามข้อตกลงและเงื่อนไขทั้งหมดต่อไปนี้ของบริการสมาชิก</p>
+                    <p>ข้อ 1 ขอบเขตของข้อตกลงและเงื่อนไขการใช้บริการ</p>
+                    <p>ข้อตกลงและเงื่อนไขการให้บริการนี้ทำขึ้นระหว่าง มารวย99 ซึ่งต่อไปนี้จะเรียกว่า “บริษัท”</p>
+                    <p>ซึ่งเป็นผู้ผลิตเกมออนไลน์หรือเป็นผู้ที่ได้รับลิขสิทธิ์ในการให้บริการเกมบนมือถือหรือคอมพิวเตอร์ เพื่อกำหนดข้อตกลงและเงื่อนไขการให้บริการระหว่างผู้เข้ามาใช้บริการ ซึ่งต่อไปนี้จะเรียกว่า “ผู้ใช้บริการ” โดยจะใช้บริการเกมของบริษัท ซึ่งต่อไปนี้จะเรียกว่า “บริการ”</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Privacy Modal -->
+    <div class="modal fade" id="privacy" tabindex="-1" role="dialog" aria-labelledby="privacyTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="privacyTitle">ประกาศด้านนโยบายความเป็นส่วนตัว</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>มารวย99 มุ่งมั่นที่จะปกป้องความเป็นส่วนตัวของผู้ใช้ และมอบประสบการณ์ด้านการเล่นเกมผ่านทางโซเชียลมีเดียให้ดียิ่งขึ้น นโยบายความเป็นส่วนตัวนี้ได้ถูกสร้างขึ้นมาเพื่อแจ้งให้คุณทราบเกี่ยวกับวิธีที่ มารวย99 จัดการ เก็บรวบรวม จัดเก็บ แบ่งปัน ใช้งาน และปกป้องข้อมูลที่คุณได้ระบุเกี่ยวกับเกม หรือแอพพลิเคชั่นต่าง ๆ ของ มารวย99 เมื่อคุณเล่นเกมของเรา หรือเข้าใช้บริการ ผลิตภัณฑ์ เนื้อหาต่าง ๆ ของเรา เว็บไซต์ Maruay99.com และ/หรือโดเมนที่ให้บริการโดย มารวย99</p>
+                    <h4>นโยบายความเป็นส่วนตัว</h4>
+                    <p>โปรดอ่านข้อกำหนดเกี่ยวกับนโยบายความเป็นส่วนตัวอย่างรอบคอบ มารวย99 ปกป้องความเป็นส่วนตัวของคุณอย่างเคร่งครัด</p>
+                    <h4>ก. ขอบเขต</h4>
+                    <p>นโยบายความเป็นส่วนตัวนี้มีผลบังคับใช้เมื่อคุณเล่นเกมของเรา หรือเข้าใช้งานผลิตภัณฑ์ บริการ เนื้อหาอื่น ๆ ของเรา เว็บไซต์ Maruay99.com และ/หรือโดเมนที่ให้บริการโดย มารวย99 ซึ่งในที่นี้เรียกว่า “บริการ”</p>
+                    <h4>ข. การเก็บรวบรวมข้อมูล</h4>
+                    <ul>
+                        มารวย99 อาจทำการเก็บรวบรวม และจัดเก็บข้อมูลบางอย่าง หรือทั้งหมดดังต่อไปนี้ที่แบ่งปันโดยผู้ให้บริการแอพพลิเคชั่นที่เชื่อมต่อของบุคคลที่สาม:
+                        <li>ชื่อ และนามสกุลของคุณ รูปภาพโปรไฟล์ของคุณ หรือ URL ของรูปภาพโปรไฟล์ หมายเลขรหัสไอดีผู้ใช้งานของคุณ (เช่น หมายเลขรหัสไอดี Facebook ของคุณ) รหัสไอดีผู้ใช้งาน และข้อมูลสาธารณะอื่น ๆ ของเพื่อนของคุณ อีเมลที่ใช้ในการเข้าสู่ระบบของคุณที่คุณได้ระบุไว้</li>
+                        <li>มารวย99 จะบันทึกประเภทอุปกรณ์ของคุณ เวอร์ชั่นระบบปฏิบัติการของคุณ ตัวยืนยันตัวตนของอุปกรณ์มือถือของคุณ เช่น ที่อยู่ของ MAC ของคุณ ตัวยืนยันตัวตนสำหรับการโฆษณา (IDFA) และ/หรือประเภทเบราว์เซอร์ของคุณ การแนะนำ และหน้าออกจากเว็บไซต์ รวมถึง URL จำนวนคลิกบนหน้าเว็บไซต์ หรือคุณสมบัติ สถานะของเกม วันที่ และเวลาของกิจกรรมบนเว็บไซต์ หรือเกม ข้อมูลทั้งหมดจะถูกนำไปใช้เพื่อการปรับปรุงบริการภายในของเรา และจะไม่ถูกนำไปเผยแพร่"</li>
+                        <li>มารวย99 จะทำแบบสำรวจกับผู้ใช้ทุกคน และเก็บรวบรวมข้อมูลที่จำเป็นทั้งหมดเพื่อการวิเคราะห์ข้อมูล และปรับปรุงบริการ ผลลัพธ์จากแบบสำรวจทั้งหมดจะมีการเผยแพร่บนเว็บไซต์หากผลลัพธ์เหล่านั้นเกี่ยวข้องกับกิจกรรมของ มารวย99</li>
+                        <li>มารวย99 จะไม่เผยแพร่ข้อมูลใด ๆ จากแบบสำรวจให้กับบุคคลใด ๆ ยกเว้นได้รับการยินยอมจากคุณ</li>
+                    </ul>
+                    <h4>ค. การปกป้องข้อมูล</h4>
+                    <ul>
+                        <li>เมื่อคุณเข้าสู่ระบบไปยังบัญชี มารวย99 ของคุณ หรือป้อนข้อมูลการชำระเงิน เรา หรือผู้ประมวลผลการชำระเงินบุคคลที่สามของเราจะใช้เทคโนโลยีการเข้ารหัสข้อมูลเพื่อเพิ่มความปลอดภัย ("SSL") ในการเข้ารหัสการถ่ายโอนข้อมูลนั้น</li>
+                        <li>มารวย99 ได้สร้างมาตรการทางเทคนิค และองค์กรที่ออกแบบมาเพื่อปกป้องข้อมูลของคุณทั้งทางออนไลน์ และออฟไลน์จากการสูญเสียโดยไม่ตั้งใจ และจากการเข้าถึง การใช้งาน การเปลี่ยนแปลง หรือการเปิดเผยโดยไม่ได้รับอนุญาต รวมทั้งเรายังมุ่งมั่นที่จะปกป้องข้อมูลของลูกค้า</li>
+                    </ul>
+                    <h4>ง. URL ของเว็บไซต์อื่น</h4>
+                    <p>Maruay99.com จะจัดหา URL ของเว็บไซต์อื่น ผู้ใช้สามารถเชื่อมโยงเว็บไซต์เหล่านั้นได้ด้วยเช่นกัน อย่างไรก็ตามนโยบายความเป็นส่วนตัวของ มารวย99 ไม่เหมาะสำหรับเว็บไซต์อื่น ๆ คุณจะต้องอ้างอิงไปยังนโยบายความเป็นส่วนตัวของเว็บไซต์เหล่านั้นเพื่อปกป้องสิทธิของคุณเอง</p>
+                    <h4>จ. การใช้งานของคุกกี้</h4>
+                    <p>เพื่อมอบบริการที่ดีให้กับผู้ใช้ มารวย99 จะทำการเก็บรวบรวมข้อมูลของคุกกี้ หากคุณไม่ยินยอมให้ทำการเก็บรวบรวมข้อมูลจาก มารวย99 โปรดเปลี่ยนการตั้งค่าเบราว์เซอร์ในคอมพิวเตอร์ของคุณ อย่างไรก็ตามการเปลี่ยนการตั้งค่าอาจมีผลกระทบบางอย่างต่อการทำงานของการเข้าชมเว็บไซต์ของ มารวย99</p>
+                    <h4>ฉ. การเปลี่ยนแปลงนโยบายความเป็นส่วนตัวของเรา</h4>
+                    <p>หากเราตัดสินใจที่จะทำการเปลี่ยนแปลงเนื้อหาของนโยบายความเป็นส่วนตัวของเรา เราจะแจ้งให้คุณ และผู้เล่นเกมคนอื่น ๆ ทราบด้วยการแจ้งผ่านทางประกาศบนเว็บไซต์ Maruay99.com หรือในเกมที่เกี่ยวข้อง หรือด้วยการส่งประกาศไปยังที่อยู่อีเมลของคุณ เราจะแจ้งให้คุณทราบก่อนที่การเปลี่ยนแปลงจะมีผลบังคับใช้ หากคุณไม่ยอมรับต่อนโยบายความเป็นส่วนตัวของ มารวย99 โปรดหยุดเล่นเกมของ มารวย99 ทันที</p>
+                    <p class="mb-1">※แก้ไขหรือลบข้อมูลส่วนบุคคล</p>
+                    <p>โปรดอย่าลังเลที่จะติดต่อเราหากคุณต้องการแก้ไขไฟล์ส่วนบุคคลของคุณ ข้อมูลที่คุณอาจแก้ไขไม่ได้รวมถึงบันทึกการใช้บริการของเรา หากคุณต้องการตรวจสอบ ลบ หรือเปลี่ยนแปลงข้อมูลเกี่ยวกับตัวคุณ หรือหากคุณมีคำถามเพิ่มเติม ติดต่อเราผ่าน อีเมลล์ starcube.th@gmail.com และทางเราจะติดต่อกลับภายใน30 วัน โปรดทราบว่าบันทึกบางอย่าง เช่น ที่เกี่ยวข้องกับการชำระเงินหรือการบริการลูกค้า จะถูกเก็บไว้เพื่อวัตถุประสงค์ทางกฎหมายและการบัญชี</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
