--- a/en/leaderboard.html
+++ b/en/leaderboard.html
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="diamond.html"><img class="w-100 pc-only" src="../images/iCON_Gift-ENG.png"><span class="ph-only justify-content-center">Diamond</span></a>
                 </li>
                 <li class="nav-item text-center">
-                    <a class="nav-link" href="contact.html"><img class="w-100 pc-only" src="../images/iCON_US-ENG.png"><span class="ph-only justify-content-center">Content Us</span></a>
+                    <a class="nav-link" href="contact.html"><img class="w-100 pc-only" src="../images/iCON_US-ENG.png"><span class="ph-only justify-content-center">Contact Us</span></a>
                 </li>
             </ul>
         </div>
@@ -52,9 +52,9 @@
     </div>
 
 
-    <main class="container-fluid p-0 diamond">
-        <div class="w-100 overflow-hidden d-flex align-items-center justify-content-center diamond-img">
-            <h2 class="text-light">Diamond</h2>
+    <main class="container-fluid p-0 leaderboard">
+        <div class="w-100 overflow-hidden d-flex align-items-center justify-content-center leaderboard-img">
+            <h2 class="text-light">leaderboard</h2>
         </div>
 
 
@@ -64,16 +64,16 @@
                     <div class="col-12 col-md-8 p-0">
                         <ul class="nav nav-pills my-3 flex-column flex-md-row justify-content-around" id="pills-tab" role="tablist">
                             <li class="nav-item p-2">
-                                <a class="nav-link diamond-btn active" id="pills-single-tab" data-toggle="pill" href="#pills-single" role="tab" aria-controls="pills-single" aria-selected="true">RANK_SINGLE</a>
+                                <a class="nav-link leaderboard-btn active" id="pills-single-tab" data-toggle="pill" href="#pills-single" role="tab" aria-controls="pills-single" aria-selected="true">RANK_SINGLE</a>
                             </li>
                             <li class="nav-item p-2">
-                                <a class="nav-link diamond-btn" id="pills-betwin-tab" data-toggle="pill" href="#pills-betwin" role="tab" aria-controls="pills-betwin" aria-selected="false">RANK_BETWIN</a>
+                                <a class="nav-link leaderboard-btn" id="pills-betwin-tab" data-toggle="pill" href="#pills-betwin" role="tab" aria-controls="pills-betwin" aria-selected="false">RANK_BETWIN</a>
                             </li>
                             <li class="nav-item p-2">
-                                <a class="nav-link diamond-btn" id="pills-total-tab" data-toggle="pill" href="#pills-total" role="tab" aria-controls="pills-total" aria-selected="false">RANK_TOTAL</a>
+                                <a class="nav-link leaderboard-btn" id="pills-total-tab" data-toggle="pill" href="#pills-total" role="tab" aria-controls="pills-total" aria-selected="false">RANK_TOTAL</a>
                             </li>
                             <li class="nav-item p-2">
-                                <a class="nav-link diamond-btn" id="pills-activity-tab" data-toggle="pill" href="#pills-activity" role="tab" aria-controls="pills-activity" aria-selected="false">RANK_ACTIVITY</a>
+                                <a class="nav-link leaderboard-btn" id="pills-activity-tab" data-toggle="pill" href="#pills-activity" role="tab" aria-controls="pills-activity" aria-selected="false">RANK_ACTIVITY</a>
                             </li>
                         </ul>    
                     </div>
