聯絡我們鏈結 / 優惠活動banner更新

--- a/en/promotions.html
+++ b/en/promotions.html
@@ -63,7 +63,7 @@
                     <div class="row w-100 m-0 py-4">
                         <div class="promotions-card d-flex p-3 bg-black-50 rounded border border-warning">
                             <div class="col-12 col-md-4 d-flex align-items-center justify-content-center p-0">
-                                <img class="w-100" src="https://pbs.twimg.com/media/ES9YfBmVAAAUt4h.jpg" alt="">
+                                <img class="w-100" src="../images/promotion-banner/AW-Web-Banner-Promotion-18012022-01500x500.png" alt="">
                             </div>
                             <div class="col-12 col-md-8 d-flex align-items-center justify-content-start flex-wrap text-light">
                                 <h3>Lorem ipsum dolor sit amet.</h3>
@@ -81,7 +81,7 @@
                     <div class="row w-100 m-0 py-4">
                         <div class="promotions-card d-flex p-3 bg-black-50 rounded border border-warning">
                             <div class="col-12 col-md-4 d-flex align-items-center justify-content-center p-0">
-                                <img class="w-100" src="https://pbs.twimg.com/media/ES9YfBmVAAAUt4h.jpg" alt="">
+                                <img class="w-100" src="../images/promotion-banner/AW-Web-Banner-Promotion-18012022-02500x500.png" alt="">
                             </div>
                             <div class="col-12 col-md-8 d-flex align-items-center justify-content-start flex-wrap text-light">
                                 <h3>Lorem ipsum dolor sit amet.</h3>
@@ -99,7 +99,7 @@
                     <div class="row w-100 m-0 py-4">
                         <div class="promotions-card d-flex p-3 bg-black-50 rounded border border-warning">
                             <div class="col-12 col-md-4 d-flex align-items-center justify-content-center p-0">
-                                <img class="w-100" src="https://pbs.twimg.com/media/ES9YfBmVAAAUt4h.jpg" alt="">
+                                <img class="w-100" src="../images/promotion-banner/AW-Web-Banner-Promotion-18012022-03500x500.png" alt="">
                             </div>
                             <div class="col-12 col-md-8 d-flex align-items-center justify-content-start flex-wrap text-light">
                                 <h3>Lorem ipsum dolor sit amet.</h3>
@@ -117,7 +117,7 @@
                     <div class="row w-100 m-0 py-4">
                         <div class="promotions-card d-flex p-3 bg-black-50 rounded border border-warning">
                             <div class="col-12 col-md-4 d-flex align-items-center justify-content-center p-0">
-                                <img class="w-100" src="https://pbs.twimg.com/media/ES9YfBmVAAAUt4h.jpg" alt="">
+                                <img class="w-100" src="../images/promotion-banner/AW-Web-Banner-Promotion-18012022-04500x500.png" alt="">
                             </div>
                             <div class="col-12 col-md-8 d-flex align-items-center justify-content-start flex-wrap text-light">
                                 <h3>Lorem ipsum dolor sit amet.</h3>
