首頁的遊戲icon手機板變並排

--- a/en/game.html
+++ b/en/game.html
@@ -100,7 +100,7 @@
                         </button>
                     </div>
                     <div class="modal-body overflow-auto">
-                        <div id="pageImg" class="w-100 img-box"></div>
+                        <div id="pageImg" class="w-100 img-box text-center"></div>
                     </div>
                 </div>
             </div>
