語系手機板以國旗顯示

--- a/th/index.html
+++ b/th/index.html
@@ -12,8 +12,8 @@
 <body>
     <nav class="title-nav position-fixed navbar navbar-expand-lg navbar-dark bg-dark align-items-center justify-content-end w-100 top-0">
         <div class="lag-box position-absolute d-flex top-0 left-0 text-light">
-            <a class="dropdown-item w-50 d-flex flex-column align-items-center justify-content-center px-2" href="index.html"><img class="w-100 mb-2 pc-only" src="../images/FlagTh-AW-WEB-ICON-Flag-20012022.png" alt=""><img class="w-75" src="../images/TextTh-AW-WEB-ICON-Flag-20012022.png"></a>
-            <a class="dropdown-item w-50 d-flex flex-column align-items-center justify-content-center px-2" href="../en/index.html"><img class="w-100 mb-2 pc-only" src="../images/FlagEng-AW-WEB-ICON-Flag-20012022.png" alt=""><img class="w-75" src="../images/TextEng-AW-WEB-ICON-Flag-20012022.png"></a>
+            <a class="dropdown-item w-50 d-flex flex-column align-items-center justify-content-center px-2" href="index.html"><img class="w-100 mb-2" src="../images/FlagTh-AW-WEB-ICON-Flag-20012022.png" alt=""><img class="w-75 pc-only" src="../images/TextTh-AW-WEB-ICON-Flag-20012022.png"></a>
+            <a class="dropdown-item w-50 d-flex flex-column align-items-center justify-content-center px-2" href="../en/index.html"><img class="w-100 mb-2" src="../images/FlagEng-AW-WEB-ICON-Flag-20012022.png" alt=""><img class="w-75 pc-only" src="../images/TextEng-AW-WEB-ICON-Flag-20012022.png"></a>
         </div>
         <a class="logo nav-link position-absolute p-0 ph-only" href="index.html"><img class="logo-img w-100" src="../images/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
