--- a/th/game.html
+++ b/th/game.html
@@ -12,8 +12,8 @@
 <body>
     <nav class="title-nav position-fixed navbar navbar-expand-lg navbar-dark align-items-center justify-content-end w-100 top-0">
         <div class="lag-box position-absolute d-flex top-0 left-0 text-light">
-            <a class="dropdown-item w-50 d-flex flex-column align-items-center justify-content-center px-2" href="game.html"><img class="w-100 mb-2 pc-only" src="../images/FlagTh-AW-WEB-ICON-Flag-20012022.png" alt=""><img class="w-75" src="../images/TextTh-AW-WEB-ICON-Flag-20012022.png"></a>
-            <a class="dropdown-item w-50 d-flex flex-column align-items-center justify-content-center px-2" href="../en/game.html"><img class="w-100 mb-2 pc-only" src="../images/FlagEng-AW-WEB-ICON-Flag-20012022.png" alt=""><img class="w-75" src="../images/TextEng-AW-WEB-ICON-Flag-20012022.png"></a>
+            <a class="dropdown-item w-50 d-flex flex-column align-items-center justify-content-center px-2" href="game.html"><img class="w-100 mb-2" src="../images/FlagTh-AW-WEB-ICON-Flag-20012022.png" alt=""><img class="w-75 pc-only" src="../images/TextTh-AW-WEB-ICON-Flag-20012022.png"></a>
+            <a class="dropdown-item w-50 d-flex flex-column align-items-center justify-content-center px-2" href="../en/game.html"><img class="w-100 mb-2" src="../images/FlagEng-AW-WEB-ICON-Flag-20012022.png" alt=""><img class="w-75 pc-only" src="../images/TextEng-AW-WEB-ICON-Flag-20012022.png"></a>
         </div>
         <a class="logo nav-link position-absolute p-0 ph-only" href="index.html"><img class="logo-img w-100" src="../images/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,15 +55,15 @@
     <main class="container-fluid p-0 game">
         
         <div class="navs-main position-relative">
-            <ul class="nav nav-pills d-flex align-items-center justify-content-around" id="pills-tab" role="tablist">
-                <li class="nav-item">
-                    <a class="nav-link game-btn active" id="pills-slots-tab" data-toggle="pill" href="#pills-slots" role="tab" aria-controls="pills-slots" aria-selected="true">SLOTS</a>
+            <ul class="nav nav-pills d-flex align-items-center justify-content-around flex-nowrap" id="pills-tab" role="tablist">
+                <li class="nav-item w-100">
+                    <a class="nav-link w-100 active text-center" id="pills-slots-tab" data-toggle="pill" href="#pills-slots" role="tab" aria-controls="pills-slots" aria-selected="true"><img class="w-100 game-icon" src="../images/Th-FishinGame-AW-WEB-ICON.png"></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link game-btn" id="pills-fishing-tab" data-toggle="pill" href="#pills-fishing" role="tab" aria-controls="pills-fishing" aria-selected="false">FISHING</a>
+                <li class="nav-item w-100 text-center">
+                    <a class="nav-link w-100" id="pills-fishing-tab" data-toggle="pill" href="#pills-fishing" role="tab" aria-controls="pills-fishing" aria-selected="false"><img class="w-100 game-icon" src="../images/Th-SlotGame-AW-WEB-ICON.png"></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link game-btn" id="pills-others-tab" data-toggle="pill" href="#pills-others" role="tab" aria-controls="pills-others" aria-selected="false">OTHERS</a>
+                <li class="nav-item w-100 text-center">
+                    <a class="nav-link w-100" id="pills-others-tab" data-toggle="pill" href="#pills-others" role="tab" aria-controls="pills-others" aria-selected="false"><img class="w-100 game-icon" src="../images/Th-CardGame-AW-WEB-ICON.png"></a>
                 </li>
             </ul>
             <div class="tab-content" id="pills-tabContent">
