--- a/th/diamond.html
+++ b/th/diamond.html
@@ -97,16 +97,16 @@
                             <div class="tab-pane fade" id="pills-receiver" role="tabpanel" aria-labelledby="pills-receiver-tab">
                                 <div class="d-flex flex-column align-items-center justify-content-center py-4 px-2">
                                     <h3 class="position-relative w-100 text-center d-flex align-items-center justify-content-center line mb-4 color-y">Receiver Gift</h3>
-                                    <img class="img-fluid" src="../images/receiver-1.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Click OK</h4>
-                                    <img class="img-fluid" src="../images/receiver-2.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Wait for sender to confirm.</h4>
-                                    <img class="img-fluid" src="../images/receiver-3.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Click Receive</h4>
-                                    <img class="img-fluid" src="../images/receiver-4.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Click Cofirm</h4>
-                                    <img class="img-fluid" src="../images/receiver-5.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Successful send, return to the main page to check out diamond.</h4>
+                                    <img class="img-fluid" src="../images/received/1.png" alt="" srcset="">
+                                    <h4 class="text-light mb-4">วิธีการรับของ</h4>
+                                    <img class="img-fluid" src="../images/received/2.png" alt="" srcset="">
+                                    <h4 class="text-light mb-4">1. เมื่อมีผู้ส่งเพชรมาให้ ผู้เล่นจะพบว่าที่ช่องส่งเพชรจะมีการแจ้งเตือนว่ามีการส่งเพชรมาให้</h4>
+                                    <img class="img-fluid" src="../images/received/3.png" alt="" srcset="">
+                                    <h4 class="text-light mb-4">2. เมื่อเปิดเข้าไปจะพบข้อมูลของเพชรที่ผู้เล่นได้รับจากผู้เล่นอื่น หากต้องการรับให้กด ตกลง หากไม่ต้องการรับ กด ไม่รับ</h4>
+                                    <img class="img-fluid" src="../images/received/4.png" alt="" srcset="">
+                                    <h4 class="text-light mb-4">3. เมื่อกดรับแล้วให้รอผู้ส่งเพชรกดยืนยันว่าเป็นการรับส่งจริง</h4>
+                                    <img class="img-fluid" src="../images/received/5.png" alt="" srcset="">
+                                    <h4 class="text-light mb-4">4. เมื่อผู้ส่งกดยืนยัน การส่งเพชรจะถูกย้ายไปที่ศูนย์ส่งมอบ ผู้รับกดรับอีกครั้งเพื่อยืนยันการรับเพชร หลังจากกดรับเพชรจะเข้าไปในกระเป๋าของผู้เล่น </h4>
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="pills-dianond" role="tabpanel" aria-labelledby="pills-dianond-tab">
