--- a/th/index.html
+++ b/th/index.html
@@ -13,10 +13,6 @@
 </head>
 <body>
     <nav class="title-nav position-fixed navbar navbar-expand-lg navbar-dark bg-dark align-items-center justify-content-end w-100 top-0">
-        <div class="lag-box position-absolute d-flex top-0 left-0 text-light">
-            <a class="dropdown-item w-50 d-flex flex-column align-items-center justify-content-center px-2" href="index.html"><img class="w-100 mb-2" src="../images/FlagTh-AW-WEB-ICON-Flag-20012022.png" alt=""><img class="w-75 pc-only" src="../images/TextTh-AW-WEB-ICON-Flag-20012022.png"></a>
-            <a class="dropdown-item w-50 d-flex flex-column align-items-center justify-content-center px-2" href="../en/index.html"><img class="w-100 mb-2" src="../images/FlagEng-AW-WEB-ICON-Flag-20012022.png" alt=""><img class="w-75 pc-only" src="../images/TextEng-AW-WEB-ICON-Flag-20012022.png"></a>
-        </div>
         <a class="logo nav-link position-absolute p-0 ph-only" href="index.html"><img class="logo-img w-100" src="../images/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -45,6 +41,14 @@
                     <a class="nav-link" href="contact.html"><img class="w-100 pc-only" src="../images/iCON_US-TH.png"><span class="ph-only justify-content-center">Content Us</span></a>
                 </li>
             </ul>
+            <div class="lag-box position-pc-absolute d-flex justify-content-center top-0 right-0 text-light">
+                <a class="dropdown-item w-50 d-flex flex-column align-items-center justify-content-center px-2" href="index.html">
+                    <img class="w-100 mb-2" src="../images/FlagTh-AW-WEB-ICON-Flag-20012022.png" alt=""><img class="w-75 pc-only" src="../images/TextTh-AW-WEB-ICON-Flag-20012022.png">
+                </a>
+                <a class="dropdown-item w-50 d-flex flex-column align-items-center justify-content-center px-2" href="../en/index.html">
+                    <img class="w-100 mb-2" src="../images/FlagEng-AW-WEB-ICON-Flag-20012022.png" alt=""><img class="w-75 pc-only" src="../images/TextEng-AW-WEB-ICON-Flag-20012022.png">
+                </a>
+            </div>
         </div>
     </nav>
 
