banner改大 / 新增twitter分享

--- a/en/contact.html
+++ b/en/contact.html
@@ -73,8 +73,15 @@
                             <h4 class="text-warning">ฝ่ายบริการลูกค้า</h4>
                             <h4 class="text-warning">สามารถติดต่อได้</h4>
                             <h4 class="text-warning">ทุกวัน 24 ชั่วโมง</h4>
-                            <a class="cbtn fb w-100 d-flex align-items-center justify-content-around mb-3" href="https://www.facebook.com/MaRuay99"><img class="icon" src="../images/facebook.png" alt="">มารวย99</a>
-                            <a class="cbtn ln w-100 d-flex align-items-center justify-content-around" href="https://lin.ee/gtCW7E9"><img class="icon" src="../images/line.png" alt="">@MR99talk</a>
+                            <a class="cbtn fb w-100 d-flex align-items-center justify-content-around mb-3" href="https://www.facebook.com/MaRuay99">
+                                <img class="icon" src="../images/facebook.png" alt="">มารวย99
+                            </a>
+                            <a class="cbtn ln w-100 d-flex align-items-center justify-content-around mb-3" href="https://lin.ee/gtCW7E9">
+                                <img class="icon" src="../images/line.png" alt="">@MR99talk
+                            </a>
+                            <a class="cbtn tw w-100 d-flex align-items-center justify-content-around" href="https://twitter.com/Maruay99P">
+                                <img class="icon" src="../images/twitter.png" alt="">Maruay99P
+                            </a>
                         </div>
                     </div>
                 </div>
