--- a/en/index.html
+++ b/en/index.html
@@ -62,7 +62,7 @@
 
     <main class="container-fluid p-0 home">
         <div class="w-100 overflow-hidden d-flex align-items-center justify-content-center home-img">
-            <img class="w-100" src="../images/Home-AW-WEB-BannerH-13012022.png" alt="">
+            <img class="h-100" src="../images/Home-AW-WEB-BannerH-13012022.png" alt="">
         </div>
         
 
