新增首頁分享按鈕 / 首頁banner 雙版本

--- a/en/contact.html
+++ b/en/contact.html
@@ -65,9 +65,9 @@
             <div class="container-fluid p-0 pt-5">
                 <div class="container">
                     <div class="row w-100 m-0 py-4">
-                        <div class="col-12 col-md-6 text-center">
+                        <div class="col-12 col-md-6 text-center d-flex flex-column align-items-center justify-content-between">
                             <h4 class="text-warning">เพิ่มเพื่อนใน LINE ด้วยคิวอาร์โค้ด</h4>
-                            <img src="../images/QR-code.jpg" alt="" srcset="">
+                            <img src="../images/QR-code.jpg">
                         </div>
                         <div class="col-12 col-md-6 text-center d-flex flex-column align-items-center justify-content-center">
                             <h4 class="text-warning">ฝ่ายบริการลูกค้า</h4>
