--- a/en/index.html
+++ b/en/index.html
@@ -127,13 +127,13 @@
                             </button>
                         </div>
                         <div class="modal-body overflow-auto">
-                            <div id="pageImg" class="w-100 img-box"></div>
+                            <div id="pageImg" class="w-100 img-box text-center"></div>
                         </div>
                     </div>
                 </div>
             </div>
             
-            
+
             <!-- Promotion -->
             <div class="container-fluid p-0 py-3">
                 <div class="container p-0">
