--- a/th/index.html
+++ b/th/index.html
@@ -61,8 +61,8 @@
 
     <!-- fixed DL bar -->
     <div class="position-fixed d-flex flex-column flex-md-row align-items-center justify-content-between p-1 fixed-dl-solid">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-            DL BTN
+        <button type="button" class="btn btnBox" data-toggle="modal" data-target="#exampleModal">
+            <img class="w-100" src="../images/Ruled.gif">
         </button>
     </div>
     
