--- a/en/game.html
+++ b/en/game.html
@@ -102,19 +102,19 @@
                 <!-- Slots Game -->
                 <div class="tab-pane fade show active" id="pills-slots" role="tabpanel" aria-labelledby="pills-slots-tab">
                     <h2 id="slots" class="font-weight-bold w-100 text-center">SLOTS</h2>
-                    <div id="slots_list" class="row w-100 mx-auto"></div>
+                    <div id="slots_list" class="row w-100 mx-auto text-center"></div>
                 </div>
 
                 <!-- fishing Game -->
                 <div class="tab-pane fade" id="pills-fishing" role="tabpanel" aria-labelledby="pills-fishing-tab">
                     <h2 id="fishing" class="font-weight-bold w-100 text-center">FISHING</h2>
-                    <div id="fishing_list" class="row w-100 mx-auto"></div>
+                    <div id="fishing_list" class="row w-100 mx-auto text-center"></div>
                 </div>
 
                 <!-- Others Game -->
                 <div class="tab-pane fade" id="pills-others" role="tabpanel" aria-labelledby="pills-others-tab">
                     <h2 id="others" class="font-weight-bold w-100 text-center">OTHERS</h2>
-                    <div id="others_list" class="row w-100 mx-auto"></div>
+                    <div id="others_list" class="row w-100 mx-auto text-center"></div>
                 </div>
                 
             </div>
