版面在微調

--- a/en/index.html
+++ b/en/index.html
@@ -187,7 +187,7 @@
             <div class="container-fluid p-0 py-3 bg-black-50">
                 <div class="container">
                     <h2 class="position-relative w-100 text-center d-flex align-items-center justify-content-center color-y">GAMES</h2>
-                    <div class="row w-100 m-0 mt-5">
+                    <div class="row w-100 m-0">
                         <a class="col-4 p-0 d-flex align-items-center justify-content-center" href="game.html">
                             <img class="w-50 ph-w-100" src="../images/Eng-SlotGame-AW-WEB-ICON.png" alt="">
                         </a>
