--- a/th/contact.html
+++ b/th/contact.html
@@ -7,6 +7,8 @@
     <title>ติดต่อเรา - มารวย99</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/custom_new.css">
+    <link rel="icon" href="../images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
 </head>
 <body>
     <nav class="title-nav position-fixed navbar navbar-expand-lg navbar-dark bg-dark align-items-center justify-content-end w-100 top-0">
@@ -86,7 +88,7 @@
 
         <section class="container-fluid p-0">
             
-            <div class="container-fluid p-0 pt-5">
+            <div class="container-fluid p-0">
                 <div class="container">
                     <div class="row w-100 m-0 py-4">
                         <div class="col-12 col-md-6 text-center d-flex flex-column align-items-center justify-content-between">
