--- a/en/promotions.html
+++ b/en/promotions.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../css/custom_new.css">
     <link rel="icon" href="../images/logo.png" type="image/x-icon">
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
+    <link rel="icon" href="../images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
 
 </head>
 <body>
