首頁 more 連結失效 / 英文活動頁

--- a/en/promotions.html
+++ b/en/promotions.html
@@ -99,13 +99,13 @@
                                 <img class="w-100" src="../images/promotion-banner/AW-Web-Banner-Promotion-18012022-01500x500.png" alt="">
                             </div>
                             <div class="col-12 col-md-8 d-flex align-items-center justify-content-start flex-wrap text-light">
-                                <h3>Lorem ipsum dolor sit amet.</h3>
-                                <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident perspiciatis facere quos exercitationem voluptas quo nostrum nemo mollitia? Nobis commodi sapiente praesentium, similique molestiae illum nesciunt excepturi pariatur ullam. Harum?</span>
+                                <h3>แพ็กเกจมือใหม่สุดพิเศษ 10 บาทเท่านั้น</h3>
+                                <span>รายละเอียดแพ็กเกจมือใหม่ 10 เพชร + ปีก Ancient Wings</span>
                                 <ul>
-                                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-                                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-                                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-                                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+                                    <li>1. วัน ราคาเพียง 10 บาท เท่านั้นคุ้มกว่า 120%</li>
+                                    <li>👉จำนวนเพชรในประวัติจะเท่ากับ 10X40</li>
+                                    <li>📢 จำกัดการซื้อ 1 ครั้งต่อ 1 ID เท่านั้น</li>
+                                    <li>📆 ระยะเวลากิจกรรม : ตั้งแต่วันที่ 19 มกราคม 2565 เวลา 08:00 น. - วันที่ 9 กุมภาพันธ์ 2565 เวลา 08:00 น.</li>
                                 </ul>
                             </div>
                         </div>
@@ -117,13 +117,16 @@
                                 <img class="w-100" src="../images/promotion-banner/AW-Web-Banner-Promotion-18012022-02500x500.png" alt="">
                             </div>
                             <div class="col-12 col-md-8 d-flex align-items-center justify-content-start flex-wrap text-light">
-                                <h3>Lorem ipsum dolor sit amet.</h3>
+                                <h3>อัพเกรด VIP กับ 3 แพ็กเกจสุดคุ้ม</h3>
                                 <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident perspiciatis facere quos exercitationem voluptas quo nostrum nemo mollitia? Nobis commodi sapiente praesentium, similique molestiae illum nesciunt excepturi pariatur ullam. Harum?</span>
                                 <ul>
-                                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-                                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-                                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-                                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+                                    <li>1. VIP แพ็กเกจสุดล้ำค่า คุ้มกว่า 120% ราคา 100 บาท รับทันที 100 เพชร + ค่าประสบการณ์ VIP + 150(จากราคาปกติ 120 บาท)</li>
+                                    <li>👉จำนวนเพชรในประวัติจะเท่ากับ 100X10</li>
+                                    <li>2. VIP แพ็กเกจสุดล้ำค่า คุ้มกว่า 120% ราคา 500 บาท รับทันที 500 เพชร + ค่าประสบการณ์ VIP +888(จากราคาปกติ 600 บาท)</li>
+                                    <li>👉จำนวนเพชรในประวัติจะเท่ากับ 500X10</li>
+                                    <li>3. VIP แพ็กเกจสุดล้ำค่า คุ้มกว่า 120% ราคา 1,000 บาท รับทันที 1,000 เพชร + ค่าประสบการณ์ VIP +1,800(จากราคาปกติ 1,900 บาท)</li>
+                                    <li>👉จำนวนเพชรในประวัติจะเท่ากับ 1,000X10</li>
+                                    <li>📆 ระยะเวลากิจกรรม : ตั้งแต่วันที่ 19 มกราคม 2565 เวลา 08:00 น. - วันที่ 9 กุมภาพันธ์ 2565 เวลา 08:00 น.</li>
                                 </ul>
                             </div>
                         </div>
@@ -135,13 +138,11 @@
                                 <img class="w-100" src="../images/promotion-banner/AW-Web-Banner-Promotion-18012022-03500x500.png" alt="">
                             </div>
                             <div class="col-12 col-md-8 d-flex align-items-center justify-content-start flex-wrap text-light">
-                                <h3>Lorem ipsum dolor sit amet.</h3>
-                                <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident perspiciatis facere quos exercitationem voluptas quo nostrum nemo mollitia? Nobis commodi sapiente praesentium, similique molestiae illum nesciunt excepturi pariatur ullam. Harum?</span>
+                                <h3>แพ็กเกจการ์ดไอเทมรูเล็ต สุดคุ้ม สำหรับคนชอบลุ้น</h3>
+                                <span>รายละเอียดแพ็กเกจ : ได้รับ 3,500 เพชร 💎 + สปินลุ้นรับการ์ดฟรีเกม Happy Fishing Hunter สูงสุดที่ bet 1,000 จำนวน 1 ใบ ราคาเพียง 3,500 บาท!!! (จากราคาปกติ 4,200 บาท)</span>
                                 <ul>
-                                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-                                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-                                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-                                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+                                    <li>👉 จำนวนเพชรในประวัติจะเท่ากับ จำนวนเพชร 3,500X1 </li>
+                                    <li>ระยะเวลากิจกรรม : ตั้งแต่วันที่ 19 มกราคม 2565 เวลา 08:00 น. - วันที่ 9 กุมภาพันธ์ 2565 เวลา 08:00 น.</li>
                                 </ul>
                             </div>
                         </div>
@@ -153,13 +154,17 @@
                                 <img class="w-100" src="../images/promotion-banner/AW-Web-Banner-Promotion-18012022-04500x500.png" alt="">
                             </div>
                             <div class="col-12 col-md-8 d-flex align-items-center justify-content-start flex-wrap text-light">
-                                <h3>Lorem ipsum dolor sit amet.</h3>
-                                <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident perspiciatis facere quos exercitationem voluptas quo nostrum nemo mollitia? Nobis commodi sapiente praesentium, similique molestiae illum nesciunt excepturi pariatur ullam. Harum?</span>
+                                <h3>แพ็กเกจจำกัดเวลาสุดคุ้ม ต่ออายุ VIP เพียงแค่ 100 บาทเท่านั้น</h3>
+                                <span>รายละเอียดแพ็กเกจ : ได้รับ 100 เพชร 💎 + VIPCard + ราคาเพียง 100 บาท!! (จากราคาปกติ 120 บาท)</span>
+                                <span>📌เงื่อนไขเพิ่มเติม</span>
                                 <ul>
-                                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-                                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-                                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-                                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+                                    <li>แพ็กเกจจำกัดเวลาสุดคุ้มจะมีให้ซื้อเฉพาะระดับ VIP 3 - 6 เท่านั้น</li>
+                                    <li>VIPCard จะขึ้นอยู่กับระดับ VIP ของท่านในตอนนั้น เช่น ถ้า ท่านมีระดับ VIP4 ก็จะเห็นเป็น VIPCard 4</li>
+                                    <li>แพ็กเกจนี้จะปรากฏขึ้นมาให้ซื้อ 2 วันก่อนจะหมดเดือน</li>
+                                    <li>สามารถซื้อได้ 1 ครั้งต่อเดือนเท่านั้น</li>
+                                    <li>VIPCard ไม่มีอายุการใช้งานสามารถเก็บไว้ใช้ได้</li>
+                                    <li>👉 จำนวนเพชรในประวัติจะเท่ากับ จำนวนเพชร 100 X 1</li>
+                                    <li>📆 ระยะเวลากิจกรรม : ตั้งแต่วันที่ 29 มกราคม 2565 เวลา 08:00 น. - วันที่ 31 มกราคม 2565 เวลา 23:59 น.</li>
                                 </ul>
                             </div>
                         </div>
