--- a/th/index.html
+++ b/th/index.html
@@ -143,7 +143,7 @@
                             <span class="sr-only">Next</span>
                         </a>
                     </div> 
-                    <div class="position-relative w-100 text-center d-flex align-items-center justify-content-end px-3"><a class="text-warning" href="/th/promotions.html">More&rarr;</a></div>           
+                    <div class="position-relative w-100 text-center d-flex align-items-center justify-content-end px-3"><a class="text-warning" href="promotions.html">More&rarr;</a></div>           
                 </div>
             </div>
             
