--- a/th/index.html
+++ b/th/index.html
@@ -120,20 +120,22 @@
                 <div class="container p-0">
                     <h2 class="position-relative w-100 text-center d-flex align-items-center justify-content-center color-y">โปรโมชั่น</h2>
                     <div id="carouselGameKind" class="carousel slide overflow-hidden mt-4" data-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img class="px-3 w-100" src="../images/promotion-banner/AW-Web-Banner-Promotion-18012022-011200x474.png" alt="Promotion Banner">
+                        <a href="promotions.html">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img class="px-3 w-100" src="../images/promotion-banner/AW-Web-Banner-Promotion-18012022-011200x474.png" alt="Promotion Banner">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="px-3 w-100" src="../images/promotion-banner/AW-Web-Banner-Promotion-18012022-021200x474.png" alt="Promotion Banner">                                
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="px-3 w-100" src="../images/promotion-banner/AW-Web-Banner-Promotion-18012022-031200x474.png" alt="Promotion Banner">                                
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="px-3 w-100" src="../images/promotion-banner/AW-Web-Banner-Promotion-18012022-041200x474.png" alt="Promotion Banner">                                
+                                </div>
                             </div>
-                            <div class="carousel-item">
-                                <img class="px-3 w-100" src="../images/promotion-banner/AW-Web-Banner-Promotion-18012022-021200x474.png" alt="Promotion Banner">                                
-                            </div>
-                            <div class="carousel-item">
-                                <img class="px-3 w-100" src="../images/promotion-banner/AW-Web-Banner-Promotion-18012022-031200x474.png" alt="Promotion Banner">                                
-                            </div>
-                            <div class="carousel-item">
-                                <img class="px-3 w-100" src="../images/promotion-banner/AW-Web-Banner-Promotion-18012022-041200x474.png" alt="Promotion Banner">                                
-                            </div>
-                        </div>
+                        </a>
                         <a class="carousel-control-prev" href="#carouselGameKind" role="button" data-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="sr-only">Previous</span>
