add keyword & description / twitter

--- a/en/contact.html
+++ b/en/contact.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content=" Maruay99, ข้อมูลติดต่อ">
+    <meta name="description" content="คุณสามารถติดต่อเข้ามาได้ตลอด 24 ชั่วโมง">
     <title>Contact Us - Maruay99</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/custom_new.css">
@@ -105,8 +107,8 @@
                             <a class="cbtn ln w-100 d-flex align-items-center justify-content-around mb-3" href="https://lin.ee/gtCW7E9">
                                 <img class="icon" src="../images/line.png" alt="">@MR99talk
                             </a>
-                            <a class="cbtn tw w-100 d-flex align-items-center justify-content-around" href="https://twitter.com/Maruay99P">
-                                <img class="icon" src="../images/twitter.png" alt="">Maruay99P
+                            <a class="cbtn tw w-100 d-flex align-items-center justify-content-around" href="https://twitter.com/Maruay99">
+                                <img class="icon" src="../images/twitter.png" alt="">Maruay99
                             </a>
                         </div>
                     </div>
