--- a/th/game.html
+++ b/th/game.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="สล็อต, เกมยิงปลา, เกมการ์ด">
+    <meta name="description" content="ข้อมูลเกมทั้งหมดใน Maruay 99 ได้รวบรวมไว้แล้วที่นี่ ทำความเข้าใจเกมก่อนที่จะเข้าไปเล่นจริง">
     <title>เกมส์ - มารวย99</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/custom_new.css">
-    <link rel="icon" href="../images/logo.png" type="image/x-icon">
-    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
     <link rel="icon" href="../images/logo.png" type="image/x-icon">
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
 
