--- a/en/diamond.html
+++ b/en/diamond.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content=" ฝากเงิน, แจกรางวัล,  รับรางวัล">
+    <meta name="description" content="แพ็คเกจฝากเงินที่ครบถ้วนพร้อมแจกรางวัลมากมาย ชวนเพื่อนมาเล่นด้วยกัน">
     <title>Gift - Maruay99</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/custom_new.css">
     <link rel="icon" href="../images/logo.png" type="image/x-icon">
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
+    
 </head>
 <body>
     <nav class="title-nav position-fixed navbar navbar-expand-lg navbar-dark bg-dark align-items-center justify-content-end w-100 top-0">
