--- a/th/index.html
+++ b/th/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content="คาสิโนมือถือ, คาสิโนเคลื่อนที่, สล็อตเคลื่อนที่, หาเงินด้วยมือถือ, สล็อต">
+    <meta name="description" content="คาสิโนเคลื่อนที่เล่นได้ทุกที่ทุกแห่ง จำนวนเกมเยอะ อัตราการจ่ายเงินรางวัลที่โคตรสูง ให้คุณได้รับทรัพย์กันแบบรัวๆ">
     <title>หน้าหลัก - มารวย99</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/custom_new.css">
