--- a/en/index.html
+++ b/en/index.html
@@ -98,15 +98,23 @@
                 </div>
             </div>
         </div> -->
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div id="carouselExampleSlidesOnly" class="carousel slide pc-only" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="w-100 d-block" src="../images/Home Banner/AW-WEB-BannerH-11022022-PC.png" alt="">
-                    <!-- <img class="w-100 ph-only" src="../images/Home Banner/AW-WEB-BannerH-11022022-PH.png" alt=""> -->
                 </div>
                 <div class="carousel-item">
                     <img class="w-100 d-block" src="../images/Home Banner/AW-SMD-MRY-BannerWebWildBuffalo-25022021-PC.png" alt="">
-                    <!-- <img class="w-100 ph-only" src="../images/Home Banner/AW-SMD-MRY-BannerWebWildBuffalo-25022021-PH.png" alt=""> -->
+                </div>
+            </div>
+        </div>
+        <div id="carouselExampleSlidesOnly" class="carousel slide ph-only" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="w-100 d-block" src="../images/Home Banner/AW-WEB-BannerH-11022022-PH.png" alt="">
+                </div>
+                <div class="carousel-item">
+                    <img class="w-100 d-block" src="../images/Home Banner/AW-SMD-MRY-BannerWebWildBuffalo-25022021-PH.png" alt="">
                 </div>
             </div>
         </div>
