--- a/en/index.html
+++ b/en/index.html
@@ -72,7 +72,7 @@
             <div class="modal-content">
                 <div class="modal-header title-nav">
                     <h5 class="modal-title text-light" id="exampleModalLabel">Download</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close text-light" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
