按鈕改字型

--- a/th/index.html
+++ b/th/index.html
@@ -8,6 +8,9 @@
     <meta name="description" content="คาสิโนเคลื่อนที่เล่นได้ทุกที่ทุกแห่ง จำนวนเกมเยอะ อัตราการจ่ายเงินรางวัลที่โคตรสูง ให้คุณได้รับทรัพย์กันแบบรัวๆ">
     <title>หน้าหลัก - มารวย99</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chonburi&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/custom_new.css">
     <link rel="icon" href="../images/logo.png" type="image/x-icon">
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
