--- a/th/index.html
+++ b/th/index.html
@@ -83,7 +83,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header title-nav">
-                    <h5 class="modal-title text-light" id="exampleModalLabel">Download</h5>
+                    <h5 class="modal-title text-light th-wd" id="exampleModalLabel">ดาวน์โหลด</h5>
                     <button type="button" class="close text-light" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
