--- a/th/index.html
+++ b/th/index.html
@@ -68,7 +68,7 @@
 
     <!-- fixed bar -->
     <div class="position-fixed d-flex flex-column flex-md-row align-items-center justify-content-between p-1 fixed-dl-bar">
-        <a id="download_btn" class="ml-2" href="">ดาวน์โหลด</a>
+        <a id="download_btn th-wd" class="ml-2" href="">ดาวน์โหลด</a>
     </div>
 
     <!-- fixed DL bar -->
