--- a/en/index.html
+++ b/en/index.html
@@ -296,7 +296,7 @@
                     <a class="ln h-100 mx-3" href="https://lin.ee/gtCW7E9">
                         <img class="h-100" src="../images/line.png" alt="">
                     </a>
-                    <a class="tw h-100 mx-3" href="https://twitter.com/Maruay99P">
+                    <a class="tw h-100 mx-3" href="https://twitter.com/Maruay99">
                         <img class="h-100" src="../images/twitter.png" alt="">
                     </a>
                 </div>
