--- a/th/index.html
+++ b/th/index.html
@@ -193,10 +193,10 @@
                     <div class="row w-100 m-0 my-5">
                         <div class="col-12 col-md-6 d-flex align-items-center justify-content-center flex-wrap text-light">
                             <dl>
-                                <dd>– โหลดฟรี เล่นง่าย แค่ล็อกอินผ่าน Facebook หรือ Line รับไอเท็ม และซิปฟรีได้ทุกวัน ที่หมวดรางวัลประจำวัน</dd>
-                                <dd>– รวยเลือกได้ รวมกว่า 50 เกมคาสิโนสุดฮิต ทั้งเกมยิงปลา เกมไพ่ เกมสล็อต ภาพสวยได้อารมณ์คาสิโนจริง</dd>
-                                <dd>– กิจกรรมแจกไม่อั้น อาทิ ชิงอันดับเซียนเกม, หีบสมบัติ หรือ Exta win รวมรางวัลมากกว่า 3,000,000 ชิป</dd>
-                                <dd>– โปรโมชั่นสุดคุ้ม รับเพชรและไอเท็มสุดพิเศษฟรีเพิ่ม อัพระดับ VIP ยิ่งสูง ยิ่งได้มาก</dd>
+                                <dd>- โหลดฟรี เล่นง่าย แค่ล็อกอินผ่าน Facebook หรือ Line รับไอเท็ม และซิปฟรีได้ทุกวัน ที่หมวดรางวัลประจำวัน</dd>
+                                <dd>- รวยเลือกได้ รวมกว่า 50 เกมคาสิโนสุดฮิต ทั้งเกมยิงปลา เกมไพ่ เกมสล็อต ภาพสวยได้อารมณ์คาสิโนจริง</dd>
+                                <dd>- กิจกรรมแจกไม่อั้น อาทิ ชิงอันดับเซียนเกม, หีบสมบัติ หรือ Exta win รวมรางวัลมากกว่า 3,000,000 ชิป</dd>
+                                <dd>- โปรโมชั่นสุดคุ้ม รับเพชรและไอเท็มสุดพิเศษฟรีเพิ่ม อัพระดับ VIP ยิ่งสูง ยิ่งได้มาก</dd>
                             </dl>
                         </div>
                         <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
@@ -307,7 +307,7 @@
                     <a class="ln h-100 mx-3" href="https://lin.ee/gtCW7E9">
                         <img class="h-100" src="../images/line.png" alt="">
                     </a>
-                    <a class="tw h-100 mx-3" href="https://twitter.com/Maruay99P">
+                    <a class="tw h-100 mx-3" href="https://twitter.com/Maruay99">
                         <img class="h-100" src="../images/twitter.png" alt="">
                     </a>
                 </div>
