下載改粗體

--- a/th/contact.html
+++ b/th/contact.html
@@ -55,7 +55,7 @@
 
     <!-- fixed bar -->
     <div class="position-fixed d-flex flex-column flex-md-row align-items-center justify-content-between p-1 fixed-dl-bar">
-        <a id="download_btn" class="ml-2" href="">ดาวน์โหลด</a>
+        <a id="download_btn" class="ml-2 th-wd" href="">ดาวน์โหลด</a>
     </div>
 
     <!-- fixed DL bar -->
@@ -70,7 +70,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Download</h5>
+                    <h5 class="modal-title th-wd" id="exampleModalLabel">Download</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
